--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div class="grid">
-        <div class="box one"></div>
+        <div class="box one" id="image"></div>
         <div class="box two"></div>
         <div class="box three"></div>
         <div class="box four"></div>
