--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -10,7 +10,7 @@
     <main>
       <div class="grid">
         <div class="box one" id="image"></div>
-        <div class="box two"></div>
+        <div class="box two" id="kanji"></div>
         <div class="box three"></div>
         <div class="box four"></div>
         <div class="box"></div>
