--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -10,23 +10,23 @@
     <main>
       <div class="grid">
         <div class="box one" id="image"></div>
-        <div class="box two" id="kanji"></div>
-        <div class="box three"></div>
+        <div class="box two" id="time"></div>
+        <div class="box three" id="kanji"></div>
         <div class="box four"></div>
         <div class="box"></div>
         <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
+        <div class="box icon"></div>
       </div>
     </main>
     <script src="index.js"></script>
