Change Color Scheme and Button Styling

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>New Tab</title>
   </head>
   <body>
     <main>
       <div class="grid">
-        <div class="box one" id="image"></div>
-        <div class="box two" id="time"></div>
-        <div class="box three" id="kanji"></div>
-        <div class="box four"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box icon">
+        <div class="button one" id="image"></div>
+        <div class="button two" id="time"></div>
+        <div class="button three" id="kanji"></div>
+        <div class="button four"></div>
+        <div class="button icon">
           <a href="https://www.facebook.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -24,7 +22,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.youtube.com">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -37,7 +35,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.twitter.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -46,7 +44,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.github.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -55,7 +53,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.reddit.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -64,7 +62,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.duolingo.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -73,7 +71,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.zainsci.github.io/blog">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -82,7 +80,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.google.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -91,7 +89,7 @@
             </svg>
           </a>
         </div>
-        <div class="box icon">
+        <div class="button icon">
           <a href="https://www.dawn.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -100,9 +98,9 @@
             </svg>
           </a>
         </div>
-        <div class="box icon"></div>
-        <div class="box icon"></div>
-        <div class="box icon">
+        <div class="button icon"></div>
+        <div class="button icon"></div>
+        <div class="button icon">
           <a href="https://www.9anime.to">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
