Change ClassNames and ID Names

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -9,11 +9,11 @@
   <body>
     <main>
       <div class="grid">
-        <div class="button one" id="image"></div>
-        <div class="button two" id="time"></div>
-        <div class="button three" id="kanji"></div>
-        <div class="button four"></div>
-        <div class="button icon">
+        <div class="grid__item" id="Poster"></div>
+        <div class="grid__item" id="Time"></div>
+        <div class="grid__item" id="Kanji"></div>
+        <div class="grid__item" id="Reader"></div>
+        <div class="grid__item icon">
           <a href="https://www.facebook.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -22,7 +22,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.youtube.com">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -35,7 +35,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.twitter.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -44,7 +44,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.github.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -53,7 +53,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.reddit.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -62,7 +62,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.duolingo.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -71,7 +71,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.zainsci.github.io/blog">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -80,7 +80,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.google.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -89,7 +89,7 @@
             </svg>
           </a>
         </div>
-        <div class="button icon">
+        <div class="grid__item icon">
           <a href="https://www.dawn.com">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -98,9 +98,9 @@
             </svg>
           </a>
         </div>
-        <div class="button icon"></div>
-        <div class="button icon"></div>
-        <div class="button icon">
+        <div class="grid__item icon"></div>
+        <div class="grid__item icon"></div>
+        <div class="grid__item icon">
           <a href="https://www.9anime.to">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
