Fix Toggle Button COlor and Spacing

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -117,7 +117,7 @@
           <div class="grid__item icon"></div>
         </div>
       </div>
-      <div id="Toggle">
+      <div id="Toggle" class="light">
         <button>
           <svg
             xmlns="http://www.w3.org/2000/svg"
