Add Settings Panel And Style Reader

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -12,7 +12,12 @@
         <div class="grid__item" id="Poster"></div>
         <div class="grid__item" id="Time"></div>
         <div class="grid__item" id="Kanji"></div>
-        <div class="grid__item" id="Reader"></div>
+        <div class="grid__item" id="Reader">
+          <div class="settings">
+            <div class="settings__chapter">Current Chapter: 01</div>
+            <div class="settings__next">Read Next</div>
+          </div>
+        </div>
         <div class="grid__item"></div>
         <div class="grid__item"></div>
         <div id="Icons">
