Add Text to Reader with Next Function

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -15,8 +15,9 @@
         <div class="grid__item" id="Reader">
           <div class="settings">
             <div class="settings__chapter">Current Chapter: 01</div>
-            <div class="settings__next">Read Next</div>
+            <div class="settings__next" id="Next">Read Next</div>
           </div>
+          <div id="Text"></div>
         </div>
         <div class="grid__item"></div>
         <div class="grid__item"></div>
