--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -15,7 +15,9 @@
         <div class="grid__item" id="Reader">
           <div class="settings">
             <div class="settings__chapter">Current Chapter: 01</div>
-            <div class="settings__next" id="Next">Read Next</div>
+            <div class="settings__next">
+              <button id="Next">Next Chapter</button>
+            </div>
           </div>
           <div id="Text"></div>
         </div>
