Fix EventListiner Bug

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -14,10 +14,8 @@
         <div class="grid__item" id="Kanji"></div>
         <div class="grid__item" id="Reader">
           <div class="settings">
-            <div class="settings__chapter">Current Chapter: 01</div>
-            <div class="settings__next">
-              <button id="Next">Next Chapter</button>
-            </div>
+            <div id="currentChapter">Current Chapter: 01</div>
+            <button id="Next">Next Chapter</button>
           </div>
           <div id="Text"></div>
         </div>
