Add Audio Section

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -20,7 +20,13 @@
           <div id="Text"></div>
         </div>
         <div class="grid__item"></div>
-        <div class="grid__item"></div>
+        <div class="grid__item" id="Audio">
+          <div class="audio">
+            <div class="audio__img"></div>
+            <div class="audio__title"></div>
+            <div class="audio__track"></div>
+          </div>
+        </div>
         <div id="Icons">
           <div class="grid__item icon">
             <a href="https://www.youtube.com" rel="noreferrer">
