Add Quotes Section

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -19,10 +19,14 @@
           </div>
           <div id="Text"></div>
         </div>
-        <div class="grid__item"></div>
+        <div class="grid__item" id="Quote">
+          <div class="quote">
+            <div class="quote__text"></div>
+            <div class="quote__author"></div>
+          </div>
+        </div>
         <div class="grid__item" id="Audio">
           <div class="audio">
-            <div class="audio__img"></div>
             <div class="audio__title"></div>
             <div class="audio__track"></div>
           </div>
